# event-emitter-plus-plus

./: CMakeLists.txt  README.md
event-emitter++/: basic_emitter.hpp  bound_emitter.hpp  bound_fcn.hpp  bound_values.hpp  emitter.hpp
example/: CMakeLists.txt  emitter_object.hpp  main.cpp
example/bound_emitter/: emitter_object.hpp
